# SoftwareRenderer

./: .gitignore  CMakeLists.txt  README.md  main.c
src/algorithm/: bresenham.c  bresenham.h
src/graphics/: buffer.c  buffer.h  color.c  color.h  draw.c  draw.h  pixel.c  pixel.h
src/math/: matrix.c  matrix.h  utils.h  vector.c  vector.h
src/platform/: framebuffer.c  framebuffer.h
src/utils/: bit.h
test/: CMakeLists.txt  main.c  matrix_test.c  matrix_test.h  vector_test.c  vector_test.h
